--- a/app/src/main/res/layout/activity_upload_picture.xml
+++ b/app/src/main/res/layout/activity_upload_picture.xml
@@ -1,19 +1,19 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
+
     tools:context="me.ceo.bitch.appathon.UploadPictureActivity">
 
-    <Button android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/photo"/>
-
     <ImageView android:id="@+id/imageView"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:src="@drawable/ic_action_camera"
-        android:layout_width="wrap_content"/>
+        android:layout_width="match_parent"/>
 
-</LinearLayout>
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter Place name"
+        android:background="@drawable/edit_text_background"
+        android:padding="15dp"/>
+
+</RelativeLayout>
